fix section padding overlapping footer

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -142,6 +142,8 @@ body
 
 .main-content
   height: 100%
+  > section
+    padding-bottom: footerHeight
 
 // .main-footer
 
@@ -150,10 +152,8 @@ body
 .section-welcome
   transform-style: preserve-3d
   box-sizing: border-box
-  padding-top: footerHeight
   height: 100%
   .container
-    margin-top: -(footerHeight)
     height: auto !important
     position: relative
     top: 50%
